--- a/CMS/appsettings.json
+++ b/CMS/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=144.91.115.253;Database=CMS;Username=postgres;Password=123456;Pooling=true;"
+  },
   "AllowedHosts": "*"
 }
