--- a/CMS/appsettings.json
+++ b/CMS/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=144.91.115.253;Database=CMS;Username=postgres;Password=123456;Pooling=true;"
   },
+  "AppSettings":{ 
+   "Token":"CMS20201054451545"
+  },
   "AllowedHosts": "*"
 }
