--- a/CMS/appsettings.json
+++ b/CMS/appsettings.json
@@ -9,8 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=144.91.115.253;Database=CMS;Username=postgres;Password=123456;Pooling=true;"
   },
-  "AppSettings":{ 
-   "Token":"CMS20201054451545"
+  "AppSettings": {
+    "Token": "CMS2020201912172018IT",
+    "Audience": "https://localhost:44311",
+    "Issuer": "https://localhost:44311"
   },
   "AllowedHosts": "*"
 }
